Many changes to work with new tweaks to CFH along with changes to reflect current system configuration

--- a/arran-context.ini
+++ b/arran-context.ini
@@ -2,9 +2,11 @@
 machine_type = desktop
 model = arran
 wifi = false
-wm = i3
-homedir = /home/camerong
 
-ohmyzsh = true
-screenfetch = true
-virtualenvwrapper = true
+i3wm = true
+i3wm_terminal = xfce4-terminal
+
+zsh = true
+zsh_ohmyzsh = true
+zsh_screenfetch = true
+zsh_virtualenvwrapper = true
